--- a/public/css/Home/index.css
+++ b/public/css/Home/index.css
@@ -14,6 +14,6 @@
     color: black;
 }
 
-.carousel-indicators{
-
+.carousel-inner {
+    transition-duration: 3s; /* Zmena rýchlosti na 3 sekundy */
 }
