--- a/public/css/Home/products.css
+++ b/public/css/Home/products.css
@@ -3,6 +3,16 @@
     max-width: 100px;
     justify-content: center;
     margin-top: auto;
+}
 
 
+.button.back {
+    background-color: black;
+    margin-right: 50px ;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
 }
